<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_menu_inicial"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/colorRelative"
    tools:context="pdm.ifpb.edu.br.projetofinal.MenuInicial">

    <TextView
        android:text="@string/text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:id="@+id/textView3"
        android:textColor="@color/colortextmedio"
        android:textSize="16sp"
        android:layout_below="@+id/textView2"
        android:layout_alignLeft="@+id/textView2"
        android:layout_alignStart="@+id/textView2"
        android:layout_alignRight="@+id/textView4"
        android:layout_alignEnd="@+id/textView4" />

    <TextView
        android:text="@string/text4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        android:id="@+id/textView5"
        android:layout_below="@+id/textView4"
        android:textSize="16sp"
        android:textColor="@color/colortextmedio"
        android:layout_alignLeft="@+id/textView4"
        android:layout_alignStart="@+id/textView4"
        android:layout_alignRight="@+id/textView4"
        android:layout_alignEnd="@+id/textView4" />

    <Button
        android:text="@string/bt_iciarcomocam"
        android:textColor="@color/colortextbt123"
        android:layout_marginTop="19dp"
        android:background="@color/colorbtiniciacam"
        android:id="@+id/button"
        android:layout_width="280sp"
        android:layout_below="@+id/textView3"
        android:layout_centerHorizontal="true"
        android:layout_height="60sp"
        android:onClick="iniciarComCam" />

    <TextView
        android:text="@string/text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView2"
        android:textSize="24sp"
        android:textColor="@color/colortextgrande"
        android:layout_alignParentTop="true"
        android:layout_alignLeft="@+id/textView4"
        android:layout_alignStart="@+id/textView4"
        android:layout_marginTop="12dp" />

    <Button
        android:text="@string/bt_iciarcomocontrole"
        android:layout_width="280sp"
        android:layout_height="60sp"
        android:layout_marginTop="30dp"
        android:id="@+id/button2"
        android:background="@color/colorbtinicarcontrole"
        android:textColor="@color/colortextbt123"
        android:layout_below="@+id/textView5"
        android:layout_alignLeft="@+id/button"
        android:layout_alignStart="@+id/button"
        android:onClick="iniciarComoControle" />

    <TextView
        android:text="@string/text3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="41dp"
        android:textSize="24sp"
        android:textColor="@color/colortextgrande"
        android:id="@+id/textView4"
        android:layout_below="@+id/button"
        android:layout_centerHorizontal="true" />


</RelativeLayout>
