<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_configuracoes_do_controle"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/colorRelative"
    tools:context="pdm.ifpb.edu.br.projetofinal.ConfiguracoesDoControle">


    <TextView
        android:text="@string/text5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        android:id="@+id/textView5"
        android:textSize="16sp"
        android:textColor="@color/colortextmedio"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="14dp"
        android:layout_marginStart="14dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="CAM AS324NH-526"
        android:textColor="@color/colortextcam"
        android:ems="10"
        android:layout_below="@+id/textView5"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="33dp"
        android:layout_marginStart="33dp"
        android:layout_marginTop="20dp"
        android:id="@+id/editText" />


    <Button
        android:text="@string/bt_gravarpor1minuto"
        android:textColor="@color/colortextbt123"
        android:background="@color/colorbtgravar1min"
        android:id="@+id/buttongravar1min"
        android:layout_width="280sp"
        android:layout_height="60sp"
        android:layout_below="@+id/editText"
        android:layout_alignLeft="@+id/editText"
        android:layout_alignStart="@+id/editText"
        android:layout_marginTop="24dp"
        android:onClick="gravarPorUmMinuto" />

    <Button
        android:text="@string/bt_vergravacoes"
        android:textColor="@color/colortextbt45"
        android:background="@color/colorbtvergravacao"
        android:id="@+id/buttonvergravacao"
        android:layout_width="280sp"
        android:layout_height="60sp"
        android:layout_marginTop="32dp"
        android:layout_below="@+id/buttongravar1min"
        android:layout_alignLeft="@+id/buttongravar1min"
        android:layout_alignStart="@+id/buttongravar1min"
        android:onClick="verGravacoes" />

    <Button
        android:text="@string/bt_assistiraovivo"
        android:textColor="@color/colortextbt45"
        android:background="@color/colorbtassistiraovivo"
        android:id="@+id/buttonassistiraovivo"
        android:layout_width="280sp"
        android:layout_height="60sp"
        android:layout_below="@+id/buttonvergravacao"
        android:layout_alignLeft="@+id/buttonvergravacao"
        android:layout_alignStart="@+id/buttonvergravacao"
        android:layout_marginTop="36dp"
        android:onClick="assistirAoVivo" />

</RelativeLayout>
